--- a/newsreader/src/components/Card/Card.css
+++ b/newsreader/src/components/Card/Card.css
@@ -11,31 +11,79 @@
 
 .card {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-around;
+  color: white;
+  flex-direction: column;
+  justify-content: center;
   box-sizing: border-box;
   align-items: center;
-  width: 400px;
-  height: 180px;
-  padding: 10px;
-  border-radius: 15px;
-  border: 3px solid #0071a7;
+  width: 350px;
+  height: 600px;
+  border-radius: 20px;
+  border: 3px solid rgb(35, 74, 90);
   background: linear-gradient(
     45deg,
-    rgba(111, 45, 45, 0.5),
-    rgba(42, 40, 40, 0.5),
-    rgba(38, 38, 147, 0.5)
+    rgba(31, 30, 30, 0.5),
+    rgba(6, 6, 6, 0.5),
+    rgba(31, 30, 30, 0.5)
   );
-  margin: 25px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 35px;
   text-decoration: none;
-  box-shadow: 0 0 15px 5px rgba(208, 200, 200, 0.6);
+  box-shadow: 0 0 15px 5px rgba(67, 129, 165, 0.6);
   animation: slideInFromLeft 0.5s ease-out forwards;
 }
 
 .card:hover {
-  border: solid 3px #ff4654;
+  border: solid 3px #6abbcf;
 }
 
 .card-button:hover {
   transform: scale(0.95);
 }
+
+.article-card-image {
+  width: 95%;
+  height: 170px;
+  object-fit: cover;
+  border-radius: 20px;
+  
+}
+
+.article-card-title {
+  color: rgba(145, 210, 247, 0.6);
+  font-weight: 900;
+  font-family: fantasy;
+  font-size: 20px;
+}
+
+.article-card-description {
+  color: rgb(220, 222, 229);
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: 300px;
+  font-size: 18px;
+}
+
+.article-card-date {
+  color: rgb(163, 216, 249);
+  font-family: fantasy;
+  font-weight: 500px;
+  font-size: 20px;
+  margin-top: auto;
+}
+
+.article-card-title,
+.article-card-description {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 6.0em
+  
+}
+
+.article-card-description {
+  -webkit-line-clamp: 3; 
+  height: 10.0em;
+}
+
