--- a/newsreader/src/components/Card/Card.css
+++ b/newsreader/src/components/Card/Card.css
@@ -35,7 +35,7 @@
 }
 
 .card:hover {
-  border: solid 3px #6abbcf;
+  border: solid 3px #555cb0;
 }
 
 .card-button:hover {
@@ -51,6 +51,7 @@
 }
 
 .article-card-title {
+  display: flex;
   color: rgba(145, 210, 247, 0.6);
   font-weight: 900;
   font-family: fantasy;
@@ -65,6 +66,8 @@
 }
 
 .article-card-date {
+  display: flex;
+  justify-content: center;
   color: rgb(163, 216, 249);
   font-family: fantasy;
   font-weight: 500px;
@@ -74,11 +77,17 @@
 
 .article-card-title,
 .article-card-description {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
-  height: 6.0em
+  height: 6.0em;
+  margin-left: 15px;
+  margin-right: 15px;
   
 }
 
@@ -86,4 +95,5 @@
   -webkit-line-clamp: 3; 
   height: 10.0em;
 }
+
 
