--- a/newsreader/src/components/Card/Card.css
+++ b/newsreader/src/components/Card/Card.css
@@ -19,7 +19,7 @@
   width: 350px;
   height: 600px;
   border-radius: 20px;
-  border: 3px solid rgb(35, 74, 90);
+  border: 3px solid rgba(43, 102, 138, 0.6);
   background: linear-gradient(
     45deg,
     rgba(31, 30, 30, 0.5),
@@ -30,12 +30,12 @@
   margin-right: 20px;
   margin-bottom: 35px;
   text-decoration: none;
-  box-shadow: 0 0 15px 5px rgba(67, 129, 165, 0.6);
+  box-shadow: 0 0 15px 3px rgba(67, 129, 165, 0.6);
   animation: slideInFromLeft 0.5s ease-out forwards;
 }
 
 .card:hover {
-  border: solid 3px #555cb0;
+  border: solid 3px #4c53a0;
 }
 
 .card-button:hover {
