--- a/newsreader/src/components/Header/Header.css
+++ b/newsreader/src/components/Header/Header.css
@@ -60,6 +60,7 @@ margin-top: 15px;
 display: flex;
 justify-content: flex-end;
 }
+
 .search-input-bar {
   border: 3px solid rgba(36, 86, 117, 0.6);
   background: linear-gradient(
@@ -74,4 +75,5 @@ justify-content: flex-end;
   font-size: 20px;
   font-weight: 600;
   border-radius: 15px;
+  padding-left: 10px;
 }
