Add Bad Routes functionaility wilcard for all routes

--- a/newsreader/src/components/Card/Card.css
+++ b/newsreader/src/components/Card/Card.css
@@ -42,6 +42,12 @@
   border: solid 3px #5887b6;
 }
 
+.card:active {
+  background-color: rgba(43, 102, 138, 0.6);
+  transform: scale(1.1);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
 .card-button:hover {
   transform: scale(0.95);
 }
