--- a/newsreader/src/components/ArticleDetails/ArticleDetails.css
+++ b/newsreader/src/components/ArticleDetails/ArticleDetails.css
@@ -1,3 +1,99 @@
-body {
-  color: white; 
+.article-image, .article-info-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 490px;
+  width: 900px;
+}
+
+.article-details-container, .single-article-page {
+display: flex;  
+justify-content: center;
+align-items: center;
+}
+
+
+.home-button {
+  border: 3px solid rgba(36, 86, 117, 0.6);
+  background: linear-gradient(
+    45deg,
+    rgba(51, 51, 109, 0.8),
+    rgba(7, 7, 7, 0.8),
+    rgba(51, 51, 109, 0.8)
+  );
+  width: 100px;
+  color: rgba(145, 210, 247, 0.6);
+  font-family: fantasy;
+  font-size: 30px;
+  font-weight: 900;
+  border-radius: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+
+.home-button:hover {
+  background-color: #a8d7ee;
+}
+
+.home-button:active {
+  background-color: #575da0;
+  transform: scale(1.1);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.no-underline {
+  text-decoration: none;
+}
+
+.article-details-container {
+  display: flex;
+  color: white;
+  flex-direction: column;
+  justify-content: center;
+  box-sizing: border-box;
+  align-items: center;
+  width: 1200px;
+  height: 1000px;
+  border-radius: 20px;
+  border: 3px solid rgba(43, 102, 138, 0.6);
+  background: linear-gradient(
+    45deg,
+    rgba(31, 30, 30, 0.5),
+    rgba(6, 6, 6, 0.5),
+    rgba(31, 30, 30, 0.5)
+  );
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 35px;
+  text-decoration: none;
+  box-shadow: 0 0 15px 3px rgba(67, 129, 165, 0.6);
+  animation: slideInFromLeft 0.5s ease-out forwards;
+}
+
+.article-title {
+  text-align: center;
+  color: rgba(145, 210, 247, 0.6);
+  font-size: 30px;
+  font-family: fantasy;
+  font-weight: 900;
+  margin: 15px;
+  margin-top: 5px;
+}
+
+.article-content {
+  color: rgb(220, 222, 229);
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: 300px;
+  font-size: 20px;
+  margin-top: 30px;
+}
+
+.article-date, .article-link {
+  color: rgb(163, 176, 249);
+  font-family: fantasy;
+  font-weight: 500px;
+  font-size: 20px;
+  margin-top: 20px;
 }
