--- a/newsreader/src/components/Card/Card.css
+++ b/newsreader/src/components/Card/Card.css
@@ -17,7 +17,7 @@
   box-sizing: border-box;
   align-items: center;
   width: 350px;
-  height: 600px;
+  height: 5450px;
   border-radius: 20px;
   border: 3px solid rgba(43, 102, 138, 0.6);
   background: linear-gradient(
@@ -54,10 +54,10 @@
 
 .article-card-image {
   width: 95%;
-  height: 170px;
+  height: 200px;
   object-fit: cover;
   border-radius: 20px;
-  
+  border: 3px solid  #3e447b;
 }
 
 .article-card-title {
@@ -70,7 +70,7 @@
 
 .article-card-description {
   color: rgb(220, 222, 229);
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 300px;
   font-size: 18px;
 }
@@ -95,15 +95,60 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
-  height: 6.0em;
+  height: 6em;
   margin-left: 15px;
   margin-right: 15px;
-  
 }
 
 .article-card-description {
-  -webkit-line-clamp: 3; 
-  height: 10.0em;
+  -webkit-line-clamp: 3;
+  height: 10em;
 }
 
+@media (min-width: 500px) {
+  .card {
+    width: 330px;
+    height: 425px;
+  }
 
+  .article-card-title,
+  .article-card-description {
+    margin: 15px;
+    width: 300px;
+    height: 100px;
+  }
+
+  .article-card-image {
+    width: 300px;
+    height: 100px;
+    object-fit: cover;
+    margin-bottom: 10px;
+    margin-top: 0px;
+  }
+
+  .article-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+}
+
+@media (min-width: 1440px) {
+  .card {
+    width: 350px;
+    height: 545px;
+  }
+
+  .article-card-image {
+    width: 95%;
+    height: 200px;
+  }
+
+  .article-card-title {
+    font-size: 20px;
+  }
+  
+  .article-card-date {
+    margin-top: 25px;
+  }
+}
