--- a/newsreader/src/components/BadRoute/BadRoute.css
+++ b/newsreader/src/components/BadRoute/BadRoute.css
@@ -51,3 +51,35 @@
   display: flex;
   justify-content: center;
 }
+
+@media (min-width: 500px) {
+  .error-nonsense-image {
+    width: 440px;
+    height: 300px;
+    margin-top: 20px;
+  }
+
+  .error-bad-route-container {
+    height: 600px;
+  }
+}
+
+@media (min-width: 820px) {
+  .error-nonsense-image {
+    width: 740px;
+    height: 300px;
+    margin-top: 20px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .error-nonsense-image {
+    width: 1000px;
+    height: 600px;
+  }
+
+  .error-bad-route-container {
+    width: 1200px;
+    height: 1000px;
+  }
+} 
